frontend/src/style.module.css
:root {
  --mood0: #c0c0c090;
  --mood1: #db2a2a90;
  --mood2: #f5a52f90;
  --mood3: #ddd01290;
  --mood4: #bccd3e90;
  --mood5: #50db2a90;

  --hg-maxwidth: 540px;
  --hg-minwidth: 350px;
  --hg-minwidthwide: 1000px;
  --hg-xxsmall: 2px;
  --hg-xsmall: 4px;
  --hg-small: 8px;
  --hg-med: 16px;
  --hg-lg: 32px;
  --hg-xlg: 64px;
  --hg-xxlg: 220px;
  --hg-xxxlg: 300px;

  --hg-header: 36px;
  --hg-pgmselect: 128px;
  --hg-instbase: 29px;
  --hg-instinfo: 74px;
  --hg-calendar: 292px;
  --hg-pgmdash: 220px;

  --hg-yellow: #f9f505;
  --hg-black: #111111;
  --hg-white: rgb(252, 252, 252);
  --hg-mid: #555555;
  --hg-blue: #1976d2;
  --hg-green: #6df31f77;
  --hg-red: #db2a2a77;
  --hg-highlight: rgb(34, 34, 34);

  --hg-bold-weight: 600;

  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  --font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: var(--hg-bold-weight);
  color: var(--hg-blue);
  text-decoration: inherit;
}
a:hover {
  color: var(--hg-blue);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  height: 100%;
}
body {
  display: block;
  place-items: center;
  min-height: 100vh;
  min-width: var(--hg-minwidth);
  width: 100%;
  color: var(--hg-white);
  background-color: var(--hg-black);
}

main {
  position: relative;
  top: var(--hg-header);
}
h1 {
  font-size: 1.25em;
  line-height: 1.5em;
  font-weight: var(--hg-bold-weight);
}

h3 {
  font-size: 1.1em;
  line-height: 1.1em;
  font-weight: var(--hg-bold-weight);
}

.card {
  padding: var(--hg-xsmall);
}

:global(#app) {
  min-width: 100%;
}

#event {
  left: 0px;
  top: var(--hg-lg);
}
.hgBold {
  font-weight: var(--hg-bold-weight);
}
.blockPadMed {
  padding: var(--hg-med);
}
.blockPadSm {
  padding: var(--hg-small);
}
.blockPadXSm {
  padding: var(--hg-xsmall);
}
.dark {
  background-color: var(--hg-black);
  color: var(--hg-white);
}
.hg100wide {
  width: 100%;
}

.blockBorder {
  border: 1px solid var(--hg-mid);
  border-radius: var(--hg-small);
}

.sibSpxSmall + .sibSpxSmall {
  margin-left: var(--hg-xsmall);
}

.sibSpSmall + .sibSpSmall {
  margin-left: var(--hg-small);
}

.sibSpMed + .sibSpMed {
  margin-left: var(--hg-med);
}

:global(.q-menu .q-list) {
  background-color: var(--hg-black);
  border: solid 1px var(--hg-mid);
}
.horiz {
  display: flex;
  flex-direction: row;
}

.vert {
  display: flex;
  flex-direction: column;
}

.maxRight {
  margin-left: auto;
}

.maxLeft {
  margin-right: auto;
}

.listStd {
  min-width: var(--hg-xlg);
  width: 100%;
}

.listTitle {
  font-size: 1.25em;
  font-weight: var(--hg-bold-weight);
}

.grid2ColActivity {
  display: grid;
  grid-template-columns: [leftCol] 50% [spacer] 0% [rightCol] 50%;
  column-gap: var(--hg-xsmall);
  row-gap: var(--hg-small);
}

.grid2ColExercise {
  display: grid;
  grid-template-columns: [leftCol] 38% [spacer] 0% [rightCol] 60%;
  column-gap: var(--hg-xsmall);
  row-gap: var(--hg-small);
}

.colTitleWrapper {
  display: flex;
  align-self: end;
  align-items: center;
  grid-row: 1;
}

.leftColumn {
  grid-column: leftCol;
}

.listRow {
  grid-row: 2;
}

.rightColumn {
  grid-column: rightCol;
}

.centered {
  align-items: center;
  align-self: center;
}

.exerciseWrap,
.activityWrap {
  display: flex;
  justify-content: center;
}
header {
  width: 100%;
  max-width: var(--hg-maxwidth);
  height: var(--hg-header);
  position: fixed;
  background-color: var(--hg-black);
  z-index: 1000;
}
header a {
  color: var(--hg-white);
}
header a:hover {
  color: var(--hg-white);
}

header :global(.q-btn-group) {
  width: 100%;
}

header :global(button) :global(.q-icon.q-btn-dropdown__arrow) {
  margin-left: -2px;
}

header :global(.q-btn) {
  padding: 4px 2px;
}

.hgHamburger {
  align-self: flex-start;
  padding: 4px;
}

header .hgHamburger {
  margin-left: auto;
  padding-right: 5px;
}

.helpButton {
  padding-left: 5px;
}
.selActivity {
  min-width: var(--hg-xxlg);
  width: auto;
  font-size: 1.25em;
}

.selActivityWrap {
  composes: horiz;
  align-items: center;
}
.selActivityWrap button {
  font-size: 0.65em;
}

.selActivityWrap > div {
  margin-left: var(--hg-small);
}

.eventsTable th {
  font-size: 1.25em;
}

.eventsTable tbody td {
  font-size: 1em;
}

.eventsTable td,
.eventsTable th {
  padding: 0px;
  text-align: center;
  border: none;
}

.eventsTable tbody td {
  border: none;
  height: 42px;
}

.eventsTable td:last-child,
.eventsTable th:last-child {
  width: 0px;
  padding: 2px;
}

.eventsTable td.expanded {
  text-align: left;
  font-family: var(--font-family);
  font-size: 1em;
  padding-left: 18px;
}

.eventsTable td.expanded a {
  position: absolute;
  right: 25px;
  top: 25px;
}

.eventsTable td.expanded > a + div {
  line-height: 3em;
  border-bottom: 1px solid var(--hg-mid);
}

.eventsTable td.expanded > div:last-child {
  line-height: 3em;
  border-top: 1px solid var(--hg-mid);
}

:global(.q-table__bottom),
:global(.q-table__container) {
  border: none;
  box-shadow: none;
}

.metaDetails {
  padding: var(--hg-small);
  max-width: var(--hg-xxxlg);
}

.metaDetails > div {
  padding: var(--hg-small);
  align-items: center;
}

.datePicker {
  max-width: var(--hg-xxlg);
}

.selExercise {
  width: 140px;
}

.inputIntensity {
  width: 7em;
}

.binarySet,
.repCountSet {
  border-radius: 4px;
  background-color: var(--hg-black);
  border: 1px solid var(--hg-mid);
  flex-wrap: wrap;
  margin-right: var(--hg-small);
  max-width: 120px;
}

.binarySet + .binarySet {
  margin-top: var(--hg-xxsmall);
}

.binarySet *:first-child,
.repCountSet *:first-child {
  padding-left: var(--hg-small);
}

.binarySet *:last-child,
.repCountSet *:last-child {
  padding-right: var(--hg-small);
}

.hgRepGood,
.hgRepFail {
  line-height: 30px;
}
/* ... */

